--- a/levels/bob/level.yaml
+++ b/levels/bob/level.yaml
@@ -6,7 +6,7 @@ area-count: 1
 objects: [chain_chomp_gate, grate_door, seesaw_platform]
 shared-path: []
 # loaded files
-skybox-bin: water
+skybox-bin: wdw
 texture-bin: generic
 effects: false
 actor-bins: [group3, group14]
